@@ -1,5 +1,14 @@
 #!/bin/bash
 
+# Этот скрипт скачивает, устанавливает и настраивает
+# IDE Eclipse. Запускается из скрипта userconf.sh
+
+if [[ "$(echo "$0" | sed 's/.*\///g')" != "userconf.sh" ]]
+	then
+		echo "Этот скрипт вызывается из userconf.sh. Завершаем..."
+		exit 0
+fi
+
 ARCH=$(uname -m)
 if [ "$ARCH" = "x86_64" ]
 	then
@@ -10,7 +19,11 @@ if [ "$ARCH" = "x86_64" ]
 		DOWNLOAD_FILE="eclipse-modeling-luna-SR2-linux-gtk.tar.gz"
 fi
 
+echo "Скачивание Eclipse..."
+
 wget -c $ARCH_URL -O $DOWNLOAD_FILE
+
+echo "Скачивание Eclipse завершено."
 
 # распаковка в ~/src
 
@@ -20,29 +33,7 @@ tar zxvf $DOWNLOAD_FILE -C ~/src
 
 mv eclipse.desktop ~/.local/share/applications/
 ln -s ~/src/eclipse/eclipse ~/bin/eclipse
-mv ~/src/eclipse/eclipse.ini ~/src/eclipse/eclipse.ini.original
-mv eclipse.ini ~/src/eclipse/
+cp ~/src/eclipse/eclipse.ini ~/src/eclipse/eclipse.ini.original
+sed -i '/--launcher.appendVmargs/i --launcher.GTK_version\n2' ~/src/eclipse/eclipse.ini
 
-$ cat eclipse.ini 
--startup
-plugins/org.eclipse.equinox.launcher_1.3.0.v20140415-2008.jar
---launcher.library
-plugins/org.eclipse.equinox.launcher.gtk.linux.x86_64_1.1.200.v20140603-1326
--product
-org.eclipse.epp.package.cpp.product
---launcher.defaultAction
-openFile
--showsplash
-org.eclipse.platform
---launcher.XXMaxPermSize
-256m
---launcher.defaultAction
-openFile
---launcher.GTK_version
-2
---launcher.appendVmargs
--vmargs
--Dosgi.requiredJavaVersion=1.7
--XX:MaxPermSize=256m
--Xms40m
--Xmx1536m
+echo "Настройка Eclipse завершена."
